--- a/package.json
+++ b/package.json
@@ -22,9 +22,6 @@
     "deploy": "npm ci && npm run build && npm run start:prod"
   },
   "dependencies": {
-    "reflect-metadata": "^0.1.13",
-    "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0",
     "@nestjs/axios": "^0.0.7",
     "@nestjs/common": "^8.0.0",
     "@nestjs/config": "^2.0.0",
@@ -33,12 +30,7 @@
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/schedule": "^1.1.0",
     "@nestjs/swagger": "^5.2.1",
-    "@nestjs/typeorm": "^8.0.3",
-    "amazon-cognito-identity-js": "^5.2.8",
-    "class-transformer": "^0.5.1",
-    "class-validator": "^0.13.2",
-    "jwks-rsa": "^2.1.1",
-    "lodash": "^4.17.21"
+    "@nestjs/typeorm": "^8.0.3"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
@@ -64,13 +56,19 @@
     "typescript": "^4.3.5"
   },
   "jest": {
-    "moduleFileExtensions": ["js", "json", "ts"],
+    "moduleFileExtensions": [
+      "js",
+      "json",
+      "ts"
+    ],
     "rootDir": "src",
     "testRegex": ".*\\.spec\\.ts$",
     "transform": {
       "^.+\\.(t|j)s$": "ts-jest"
     },
-    "collectCoverageFrom": ["**/*.(t|j)s"],
+    "collectCoverageFrom": [
+      "**/*.(t|j)s"
+    ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
   }
