--- a/package.json
+++ b/package.json
@@ -22,15 +22,12 @@
     "deploy": "npm ci && npm run build && npm run start:prod"
   },
   "dependencies": {
-    "@nestjs/axios": "^0.0.7",
     "@nestjs/common": "^8.0.0",
-    "@nestjs/config": "^2.0.0",
     "@nestjs/core": "^8.0.0",
-    "@nestjs/passport": "^8.2.1",
     "@nestjs/platform-express": "^8.0.0",
-    "@nestjs/schedule": "^1.1.0",
-    "@nestjs/swagger": "^5.2.1",
-    "@nestjs/typeorm": "^8.0.3"
+    "reflect-metadata": "^0.1.13",
+    "rimraf": "^3.0.2",
+    "rxjs": "^7.2.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
