--- a/package.json
+++ b/package.json
@@ -22,12 +22,35 @@
     "deploy": "npm ci && npm run build && npm run start:prod"
   },
   "dependencies": {
+    "@aws-sdk/client-cloudwatch-logs": "^3.82.0",
+    "@nestjs/axios": "^0.0.7",
     "@nestjs/common": "^8.0.0",
+    "@nestjs/config": "^2.0.0",
     "@nestjs/core": "^8.0.0",
+    "@nestjs/passport": "^8.2.1",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/schedule": "^1.1.0",
+    "@nestjs/typeorm": "^8.0.3",
+    "amazon-cognito-identity-js": "^5.2.8",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
+    "jwks-rsa": "^2.1.1",
+    "lodash": "^4.17.21",
+    "moment-timezone": "^0.5.34",
+    "nest-winston": "^1.6.2",
+    "passport": "^0.5.2",
+    "passport-jwt": "^4.0.0",
+    "pg": "^8.7.3",
+    "postgres": "^3.0.5",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "sqlite3": "^5.0.3",
+    "swagger-ui-express": "^4.3.0",
+    "typeorm": "^0.2.45",
+    "winston": "^3.7.2",
+    "winston-cloudwatch": "^6.0.0",
+    "xml2js": "^0.4.23"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
